@@ -943,9 +943,6 @@ void version(void)
 #ifdef ENABLE_UTF8
     printf(" --enable-utf8");
 #endif
-#ifdef USE_SLANG
-    printf(" --with-slang");
-#endif
     printf("\n");
 }
 
@@ -1144,19 +1141,10 @@ RETSIGTYPE handle_sigwinch(int signal)
     if (filepart != NULL)
 	unpartition_filestruct(&filepart);
 
-#ifdef USE_SLANG
-    /* Slang curses emulation brain damage, part 1: If we just do what
-     * curses does here, it'll only work properly if the resize made the
-     * window smaller.  Do what mutt does: Leave and immediately reenter
-     * Slang screen management mode. */
-    SLsmg_reset_smg();
-    SLsmg_init_smg();
-#else
     /* Do the equivalent of what Minimum Profit does: Leave and
      * immediately reenter curses mode. */
     endwin();
     doupdate();
-#endif
 
     /* Restore the terminal to its previous state. */
     terminal_init();
@@ -1301,31 +1289,12 @@ void enable_flow_control(void)
  * control characters. */
 void terminal_init(void)
 {
-#ifdef USE_SLANG
-    /* Slang curses emulation brain damage, part 2: Slang doesn't
-     * implement nonl() or noecho() properly, so there's no way to
-     * properly reinitialize the terminal using them.  We have to save
-     * the terminal state after the first call and restore it on
-     * subsequent calls. */
-    static struct termios newterm;
-    static bool newterm_set = FALSE;
-
-    if (!newterm_set) {
-#endif
-
-	raw();
-	nonl();
-	noecho();
-	disable_extended_io();
-	if (ISSET(PRESERVE))
-	    enable_flow_control();
-
-#ifdef USE_SLANG
-	tcgetattr(0, &newterm);
-	newterm_set = TRUE;
-    } else
-	tcsetattr(0, TCSANOW, &newterm);
-#endif
+    raw();
+    nonl();
+    noecho();
+    disable_extended_io();
+    if (ISSET(PRESERVE))
+	enable_flow_control();
 }
 
 /* Read in a character, interpret it as a shortcut or toggle if
@@ -1760,12 +1729,8 @@ int main(int argc, char **argv)
 	char *locale = setlocale(LC_ALL, "");
 
 	if (locale != NULL && (strcasestr(locale, "UTF8") != NULL ||
-		strcasestr(locale, "UTF-8") != NULL)) {
-#ifdef USE_SLANG
-	    SLutf8_enable(1);
-#endif
+		strcasestr(locale, "UTF-8") != NULL))
 	    utf8_init();
-	}
     }
 #else
     setlocale(LC_ALL, "");
